# IA-Agent-Tech-For-Humans-Back-end

./: .env.example  Dockerfile  LICENSE  README-RECRUTADOR.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  start_system.bat
.github/workflows/: python-tests.yml
docs/: DESENVOLVIMENTO.md  DOCUMENTACAO-TECNICA.md  architecture.md  otimizacao-tokens.md
src/: config.py  main.py
src/agents/: cambio.py  chat.py  credito.py  entrevista.py  optimized_chat.py  orchestrator.py  triagem.py
src/api/: routes.py
src/data/: clientes.csv  score_limite.csv  solicitacoes_aumento_limite.csv
src/models/: domain.py  schemas.py
src/services/: auth_service.py  csv_service.py  llm_service.py  score_service.py
src/ui/: api_client.py  streamlit_app_agent.py
src/utils/: exceptions.py  logging_config.py  text_normalizer.py  token_monitor.py  value_extractor.py
tests/: conftest.py  test_ai_agent.py  test_cambio.py  test_complete_flows.py  test_credito.py  test_direct.py  test_entrevista.py  test_integration.py  test_natural_language.py  test_orchestrator.py  test_restrictions.py  test_triagem.py
